package json file

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "SchereSteinPapier",
+  "source": "index.html",
+  "browserslist": "> 0.5%, last 2 versions, not dead",
   "version": "1.0.0",
   "description": "",
-  "main": "index.html",
   "scripts": {
     "start": "parcel",
     "build": "parcel build"
@@ -20,6 +21,6 @@
   "homepage": "https://github.com/sa19b025/SchereSteinPapier#readme",
   "dependencies": {},
   "devDependencies": {
-    "parcel": "^2.0.1"
+    "parcel": "latest"
   }
 }
